# world-cup

./: .gitignore  LICENSE  PLAN.md  README.md  index.ipynb  index.py  main.ipynb  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  wc_PLAN.md  world_cup_simulation.py
.devcontainer/: devcontainer.json
.github/workflows/: tests.yml
apps/: __init__.py  home.py  team_report_card.py
apps/pages/: 1_V1_Probabilities.py  2_V2_Form.py  3_V2_Probabilities.py  4_V2_2022_Backtest.py  5_V3_Probabilities.py  6_V3_2022_Backtest.py  7_Team_Report_Card.py
assets/: README.md
data/: README.md
data/processed/validation/: match_predictions_2022.csv  model_validation_2022.json  team_backtest_2022.csv
data/processed/world_cup/: FIFA_World_Cup_Champions_20260210_051012.csv  FIFA_World_Cup_Hosts_20260210_051012.csv  FIFA_World_Cup_Recent_20260210_051012.csv  FIFA_World_Cup_Results_All_Time_20260210_051012.csv  fifa_world_cup_history.csv  fifa_world_rankings_jan_2026.csv  football_major_competitions.csv  world_cup_historical_tournament_formats_1930_2022.csv
data/processed/world_cup/1930/: elo.csv  placement.csv  results.csv  schedule.csv  squads.csv  teams.csv
data/processed/world_cup/1934/: elo.csv  placement.csv  (+4 more)
docs/: elo_rating_reference.md  features.md  model_card.md
scripts/: bootstrap_kaggle_data.py  build_historical_world_cup_dataset.py  build_historical_world_cup_editions.py  build_model_validation.py  build_world_cup_2026_dataset.py
tests/: test_world_cup_simulation.py
world_cup_sim/: __init__.py  constants.py  shared.py  v1.py  v2.py  v3.py
(+391 files in other folders)
